<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.openclassrooms</groupId>
	<artifactId>tourguide</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>tourguide</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>17</java.version>
		<kotlin.version>2.1.0</kotlin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>com.gpsutil</groupId>
			<artifactId>gpsutil</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.trippricer</groupId>
			<artifactId>trippricer</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.rewardcentral</groupId>
			<artifactId>rewardcentral</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.36</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
				<executions>
					<execution>
						<id>install-gpsutil</id>
						<goals>
							<goal>install-file</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<file>${project.basedir}/libs/gpsUtil.jar</file>
							<groupId>com.gpsutil</groupId>
							<artifactId>gpsutil</artifactId>
							<version>1.0</version>
							<packaging>jar</packaging>
						</configuration>
					</execution>
					<execution>
						<id>install-rewardcentral</id>
						<goals>
							<goal>install-file</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<file>${project.basedir}/libs/RewardCentral.jar</file>
							<groupId>com.rewardcentral</groupId>
							<artifactId>rewardcentral</artifactId>
							<version>1.0</version>
							<packaging>jar</packaging>
						</configuration>
					</execution>
					<execution>
						<id>install-trippricer</id>
						<goals>
							<goal>install-file</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<file>${project.basedir}/libs/TripPricer.jar</file>
							<groupId>com.trippricer</groupId>
							<artifactId>trippricer</artifactId>
							<version>1.0</version>
							<packaging>jar</packaging>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
